# Bachelor-Thesis

./: .gitignore  3D_LOWER_COMMANDS.sh  3D_LOWER_IMPLEMENTATION_SUMMARY.md  3D_LOWER_QUICK_START.md  3D_LOWER_VISUAL_GUIDE.sh  CLUSTERFIT_IMPLEMENTATION_SUMMARY.md  README.md  START_CLUSTERFIT_EXAMPLE.sh  debug.json  pyproject.toml  requirements.txt  run  run_nnunet  sitecustomize.py  splits_final.json  stats.csv
.claude/: settings.json  settings.local.json
src/custom_model/: __init__.py  dataset.py  losses.py  model.py  train.py  transforms.py
src/custom_model/utils/: __init__.py  export_augmented_dataset.py  preview_augmentation.py
src/nn_UNet/: 3D_LOWER_TRAINING.md  CLUSTERFIT_GUIDE.md  CLUSTERFIT_QUICK_REF.md  README_CLUSTERFIT.md  __init__.py  clusterfit_utils.py  label_stats.py  nnunet_predict.py  nnunet_trainer_pretrained.py  nnunet_trainer_wandb.py  pipeline.py  prepare_dataset001.py  tree_inference_helpers.py
src/nn_UNet/nnunet_data/nnUNet_preprocessed/Dataset001_BPWoodDefects/: splits_final.json
src/nn_UNet/slurm_templates/: plan_cpu.sh  predict_gpu.sh  train_arm_hpe.sh  train_gpu_a100.sh  train_gpu_a100_3d_lower.sh  train_gpu_p100.sh  train_gpu_p100_3d_lower.sh
src/preprocessing/: upload_to_cvat.py
src/preprocessing/conversion/: NIfTI2datumaro.py  ima2png.py  mask2datumaro.py  nifti_to_datumaro.py  nii2mask.py  nnunet_predict.py  png2ima.py  predict2datumaro.py  segmask2ima.py  segmentmask2nnunetformat.py
src/preprocessing/segmentation/: seg_common.py  seg_config.py  seg_hniloba.py  seg_kura.py  seg_log.py  seg_pozadi.py  seg_suk.py  seg_trhlina.py  seg_trhlina_and_hniloba.py  segmentation.py  test.ipynb
src/preprocessing/segmentation/config/: dub1.config  dub17.config  dub37.config  dub5.config  optimized.config
src/preprocessing/utils/: generate_splits.py  merge_and_upload_datumaro.py  split_nnunet_volumes.py  zorder_cvat_fix.py
(+14 files in other folders)
