[tool.poetry]
name = "ima-to-png-converter"
version = "0.1.0"
description = "Convert IMA medical imaging files to PNG format"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydicom = "^2.4"
Pillow = "^10.0"
numpy = "1.26.4"
SimpleITK = "^2.3"
improutils = "^1.2.1"
tqdm = "^4.66"
pycocotools = "^2.0.11"
datumaro = "^1.12.0"
requests = "^2.31"
python-dotenv = "^1.0"
dotenv = "^0.9.9"
requests-toolbelt = "^1.0.0"
cvat-sdk = "^2.60.0"
nnunetv2 = "^2.6.2"
torch = {version = "2.6.0+cu124", source = "pytorch-cu124"}
torchvision = {version = "0.21.0+cu124", source = "pytorch-cu124"}
torchaudio = {version = "2.6.0+cu124", source = "pytorch-cu124"}
opencv-python = "4.9.0.80"
opencv-contrib-python = "4.9.0.80"
hiddenlayer = {git = "https://github.com/FabianIsensee/hiddenlayer.git"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"


[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
